# py-obsidianmd

./: .coveragerc  .gitignore  404.html  CONTRIBUTING.md  LICENSE.txt  Readme.md  env.yml  index.html  objects.inv  pyproject.toml  requirements.txt  requirements.yml  sitemap.xml  update_coverage.sh
about/: index.html
dev/: subtags.py
docs/: cheatsheet.md  index.md  mkdocs.yml
docs/docs/: about.md  examples.md  index.md  overview.md  reference.md
docs/docs/reference/: metadata.md  note.md
examples/: index.html
overview/: index.html
pyomd/: __init__.py  exceptions.py  metadata.py  misc.py  note.py
pyomd/config/: config.py  default.yaml
reference/: index.html
reference/metadata/: index.html
reference/note/: index.html
search/: search_index.json
source/: exceptions.py  metadata.py  note.py
test/: __init__.py  load_test_data.py  test_frontmatter.py  test_tags.py  test_utils.py
test/0-test-data/n1/: n1-inline-tostr.md  n1-meta.json  n1.md
test/0-test-data/n2/: n2-meta.json  n2.md
test/metadata/: a_tmp.py  templates.py  test_Frontmatter.json  test_Frontmatter_2.py  test_InlineMetadata.json  test_InlineMetadata.py  test_InlineMetadata_2.py  test_Metadata.json  test_Metadata.py  test_NoteMetadata.json  test_NoteMetadata.py  test_frontmatter.py  test_inline.py  test_inline_metadata.py  test_note_metadata.py  test_notemeta.py
test/note/: templates.py  test_Notes.json  test_Notes.py
test/test-data/: m1-metadata.json  m2-frontmatter.md  m2-metadata_f.json  m3.md  m4.md  note1.md
test1/: index.html
workflows/: basics.ipynb
(+39 files in other folders)
