[tool.poetry]
name = "py-obsidianmd"
version = "0.1.2"
description = "python library for ObsidianMD"
authors = ["Selim Raboudi <selim.raboudi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/selimrbd/py-obsidianmd"
packages = [
    { include = "pyomd" }
]

[tool.poetry.dependencies]
python = "^3.10"
python-frontmatter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.0"
coverage = "^6.4"
pytest = "^7.1"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
