[tool.poetry]
name = "py-obsidianmd"
version = "0.1.7"
description = "python library for ObsidianMD"
authors = ["Selim Raboudi <selim.raboudi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/selimrbd/py-obsidianmd"
packages = [
    { include = "pyomd" }
]

[tool.poetry.dependencies]
python = "^3.10"
python-frontmatter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.0"
coverage = "^6.4"
pytest = "^7.1"
ipykernel = "^6.15.1"
mkdocs = "^1.3.1"
pydocstyle = "^6.1.1"
pylint = "^2.15.0"
mkdocstrings = "^0.19.0"
mkdocs-material = "^8.5.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
